--- a/styles/links.css
+++ b/styles/links.css
@@ -1,30 +1,29 @@
 /*Links*/
-/* line 3, C:/Users/NGA_XFO/Documents/digital-attack-team/conduit/sass/links.scss */
+/*Light*/
+/*Dark*/
+/* line 5, C:/Users/NGA_XFO/Documents/digital-attack-team/conduit/sass/links.scss */
 a:link {
   text-decoration: none;
+  color: #c2714f;
 }
 
-/* line 7, C:/Users/NGA_XFO/Documents/digital-attack-team/conduit/sass/links.scss */
+/* line 10, C:/Users/NGA_XFO/Documents/digital-attack-team/conduit/sass/links.scss */
 a:hover {
   text-decoration: underline;
+  color: #a55939;
 }
 
-/* line 11, C:/Users/NGA_XFO/Documents/digital-attack-team/conduit/sass/links.scss */
+/* line 15, C:/Users/NGA_XFO/Documents/digital-attack-team/conduit/sass/links.scss */
 a:active {
   outline: 0;
   outline: none;
 }
 
-/* line 16, C:/Users/NGA_XFO/Documents/digital-attack-team/conduit/sass/links.scss */
+/* line 20, C:/Users/NGA_XFO/Documents/digital-attack-team/conduit/sass/links.scss */
 a:visited {
   outline: 0;
   outline: none;
-}
-
-/* line 21, C:/Users/NGA_XFO/Documents/digital-attack-team/conduit/sass/links.scss */
-a:visited {
-  outline: 0;
-  outline: none;
+  color: #004d99;
 }
 
 /* line 26, C:/Users/NGA_XFO/Documents/digital-attack-team/conduit/sass/links.scss */
