--- a/templates/comments-popover.html
+++ b/templates/comments-popover.html
@@ -1,6 +1,6 @@
 <div>
 	<div class="all-comments-wrapper">
-        <div ng-repeat="comment in articles[currentIndex].comments track by comment.dateTime" class="ncomments-wrapper">
+        <div ng-repeat="comment in articles[currentIndex].comments track by comment.dateTime" class="comments-wrapper">
             <div class="info-wrapper" ng-class="{'self': comment.user == username}">
                 <div class="name">{{comment.user}}</div>
                 <div class="time-stamp">{{comment.dateTime}}</div>
